# pixerise

./: .pre-commit-config.yaml  .windsurfrules  Justfile  README.md  diagram.md  pyproject.toml
benchmarks/: bounding_sphere_benchmark.py  clip_triangle_benchmark.py  clipping_bounding_sphere_benchmark.py  clipping_triangle_benchmark.py  culling_benchmark.py  linalg_benchmark.py  line_benchmark.py  rasterizing_flat_triangle_benchmark.py  rasterizing_line_benchmark.py  rasterizing_shaded_triangle_benchmark.py  rasterizing_triangle_benchmark.py  raycasting_benchmark.py  shaded_triangle_benchmark.py  shading_flat_benchmark.py  shading_gouraud_benchmark.py  transform_vertex_benchmark.py  transforming_normal_benchmark.py  transforming_vertex_benchmark.py  triangle_benchmark.py
examples/: clipped_triangles.py  clipping_flat_triangles.py  clipping_shaded_triangles.py  clipping_triangles.py  cubes.py  flat_shading.py  lines.py  rasterizing.py  rasterizing_flat_triangles.py  rasterizing_lines.py  rasterizing_shaded_triangles.py  raytracing.py  rendering_flat_shading.py  rendering_gouraud_shading.py  rendering_hit_shapes.py  rendering_obj_file.py  rendering_ray_casting.py  rendering_wireframe.py  shaded_triangles.py  triangles.py
src/: kernel.py  linalg.py  pixerise.py  scene.py
tests/: test_bounding_sphere.py  test_clipping.py  test_clipping_triangles.py  test_culling.py  test_culling_back_faces.py  test_linalg.py  test_lines.py  test_rasterizer.py  test_rasterizing_lines.py  test_rasterizing_shaded_triangles.py  test_rasterizing_triangles.py  test_ray_casting.py  test_raycasting.py  test_scene.py  test_shaded_triangles.py  test_shading.py  test_shading_flat.py  test_shading_gouraud.py  test_transform_vertex.py  test_transforming_normal.py  test_transforming_vertex.py  (+1 more)
(+17 files in other folders)
