[project]
name = "pixerise"
version = "0.3.0"
description = "An easy to use 3D renderer in Python"
authors = [
    { name = "Enrico Stara", email = "enrico.stara@gmail.com" },
]
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
examples = [
    "pygame>=2.6.1",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
