[project]
name = "pixerise"
version = "0.11.0"
description = "A high-performance 3D software renderer implemented in Python, optimized with NumPy and Numba JIT compilation."
authors = [
    { name = "Enrico Stara", email = "enrico.stara@gmail.com" },
]
dependencies = [
    "numpy>=2.0.0",
    "numba>=0.60.0",
    "scipy>=1.14.1",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
examples = [
    "pygame>=2.6.1",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
lint = [
    "ruff>=0.9.6"
]
